app/assets/stylesheets/intro.scss
@import "variables";

.intro-section {
  padding-top: 50px;
  position: relative;
  background-size: cover;
  z-index: 1;
  background-image: image_url("background");
}

.intro-section:before {
  content: "";
  z-index: -1;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.2);
}

.intro-section:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 150px;
  z-index: -1;
  background: #fff;
}

.intro {
  padding: 0 20px;
  margin-top: 100px;
  text-align: center;
  background: #fff;
}

.intro .profile-img {
  height: 200px;
  width: 200px;
  border-radius: 100px;
  margin: 0 auto;
  overflow: hidden;
  position: relative;
  top: -100px;
  margin-bottom: -70px;
}

.intro .information > li {
  display: block;
  margin: 5px 0;
}

.social-icons {
  padding-top: 1rem;
}

.intro .social-icons > li > a {
  font-size: 2rem;
  position: relative;
  margin: 0 5px 5px;
  color: #c0c0c0;
}

.intro .social-icons > li > a:hover {
  color: $campbell-blue;
}

.intro .social-icons > li > a:hover:after {
  -webkit-transform: scale(1);
  transform: scale(1);
}

@media (min-width: 320px) and (max-width: 1025px) {
  .name {
    font-size: 3.5rem;
  }

  .position{
    font-size: 2rem;
  }

  .intro .social-icons > li > a {
    font-size: 3.5rem;
  }
}

